W-17008575: Fix Error while building the 'ArtifactClassLoaderHolder'